# remote-dictionary

./: readme.txt
client/: Cargo.toml
client/benches/: benchmark_api.rs
client/src/: data_structures.rs  lib.rs  main.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs
server/src/endpoints/: data_structures.rs  get_request.rs  mod.rs
server/src/endpoints/get_meaning/: data_structures.rs  get_request.rs  mod.rs
server/src/endpoints/get_stats/: data_structures.rs  get_stats.rs  mod.rs
server/src/endpoints/set_meaning/: data_structures.rs  mod.rs  set_request.rs
