[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.152"
serde_json="1.0.93"
serde_with = "2.2.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark_api"
harness = false

[[bench.exec]]
name = "bench"
cmd = "cargo bench"
args = ["--bench", "benchmark_api"]

[[bench.targets]]
name = "benchmark_api"
path = "benches/benchmark_api.rs"
